# CADO

./: .gitignore  LICENSE  Makefile  README.md
CPP/: .gitignore  CADTopOp.sh  ToPyRunner.sh
CPP/Code/: CMakeLists.txt  Makefile
CPP/Code/src/: CADToVoxel.cpp  Doxyfile
CPP/Code/src/ColorHandler/: ColorHandler.cpp  ColorHandler.hpp
CPP/Code/src/DataWrappers/: BodyPartsContainer.cpp  BodyPartsContainer.hpp  ListOfShape.cpp  ListOfShape.hpp  VoxelShapesContainer.cpp  VoxelShapesContainer.hpp
CPP/Code/src/Helper/: Helper.hpp
CPP/Code/src/Reader/: CAFReader.hpp  IGESCAFReader.cpp  IGESCAFReader.hpp  Reader.cpp  Reader.hpp  STEPCAFReader.cpp  STEPCAFReader.hpp
CPP/Code/src/Voxelizer/: VoxelIndexCalculator.cpp  VoxelIndexCalculator.hpp  VoxelShape.cpp  VoxelShape.hpp  Voxelizer.cpp  Voxelizer.hpp
CPP/Code/src/Writer/: Writer.hpp  WriterSTEP.cpp  WriterSTEP.hpp  Writer_ToPy.cpp  Writer_ToPy.hpp  Writer_VTK.cpp  Writer_VTK.hpp
Doc/Webpage/: projectDesc.html
Examples/Bridge/: Bridge.iges  Bridge.step  Bridge_Fixed.step  Bridge_load.iges  Bridge_load.step
Examples/Cantilever/: Cantilever_Fixed.step  Cantilever_ToOptimize.step  Cantilever_load.iges  Cantilever_load.step
GUI/: .gitignore  GUI.pro  inputverificator.cpp  inputverificator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  scriptcaller.cpp  scriptcaller.h  stringhelper.cpp  stringhelper.h
PYTHON/: .gitignore
PYTHON/Extraction/WorkUnstructuredGrid/: Ugrid_to_Python.py
PYTHON/NURBSReconstruction/: README.md  runningScript.py
PYTHON/NURBSReconstruction/BackToCAD/: BezierToSTEP.py  README.md  (+8 more)
(+52 files in other folders)
